finalProject/inkle/static/css/login.css
#welcomeText
{
    color: #288D42;
    font-size: 20px;
    font-weight: bold;
    text-align: justify;
    margin-bottom: 20px;
}

#welcomeImage
{
    height: 275px;
    width: 470px;
}

.loginLabel, .registrationLabel
{
    text-align: right;
    font-weight: bold;
    margin-bottom: 11px;
}

#loginEmail, #registrationFirstName, #registrationLastName, #registrationEmail, #registrationConfirmEmail, #registrationPassword, #registrationConfirmPassword
{
    margin-bottom: 10px;
}

#registrationMonth, #registrationDay, #registrationYear
{
    margin-bottom: 7px;
}

#registrationConfirmPasswordLabel
{
    margin-left: -35px;
}

#keepLoggedIn
{
    float: right;
    margin-top: 15px;
    text-align: right;
}

#forgottenPassword
{
    margin: 0px 0px 1px 8px;
    text-align: right;
}

#forgottenPassword a
{
    font-size: 12px;
    color: #288D42;
}

#loginButton, #registrationButton
{
    padding: 5px 0px 5px 0px;
    font-weight: bold;
    font-size: 12px;
    color: white;
    margin-top: 10px;
    border-style: solid;
    border-radius: 5px;
    background-color: #288D42;
    border-color: #336E34;
}

#loginButton:hover, #registrationButton:hover
{
    border-color: #1A492B;
    cursor: pointer;
}


.invalidInput
{
    border: solid 2px #FF0000;
}

.unselectedContent
{
    display: none;
}

